# coroutini

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: clang-test.yml  gcc-14-gcovr.yml  gcc-14-lcov.yml  gcc-14-test.yml
lib/: CMakeLists.txt  main.cppm
lib/future/: future.cppm  main.cppm  utils.cppm
lib/thread_pool/: thread_pool.cppm
lib/threadpool/: threadpool.cppm
lib/utils/: defer.cppm  main.cppm  manual_clock.cppm
tests/: CMakeLists.txt  blank.cpp  future.cpp  test.cpp  thread_pool.cpp
tests/thread_pool/: thread_pool.cpp
tests/utils/: defer.cpp  manual_clock.cpp
