add_executable(coroutini_test)
target_sources(coroutini_test
  PRIVATE
    future.cpp
    thread_pool/thread_pool.cpp
    utils/defer.cpp
    utils/manual_clock.cpp
)
target_link_libraries(coroutini_test
  PRIVATE
    coroutini
    coroutini_utils
    Catch2::Catch2WithMain
)
catch_discover_tests(coroutini_test)
